--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate hover-effect" data-animate="fadeInUp">
                                                 <h3>Module-1</h3>
-                                                <h4><a href="./module-1\index.html">Web Development</a></h4>
+                                                <h4><a href="./module-1/index.html">Web Development</a></h4>
                                                 <p><h5><strong>HTML</strong><strong>CSS</strong>&<strong>Javascript</strong></h5></p>
                                             </div>
                                         </div>
