--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://templatemo.com/tm-528-elegance
                                     <li data-menuanchor="slide04"><a href="#slide04">My Skills</a></li>
                                     <li data-menuanchor="slide05"><a href="#slide05">My Work</a></li>
                                     <!-- <li data-menuanchor="slide06"><a href="#slide06">Testimonials</a></li> -->
-                                    <li data-menuanchor="slide07"><a href="#slide07">Contact Me</a></li>
+                                    <li data-menuanchor="slide07"><a href="#contact">Contact Me</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -458,7 +458,7 @@ https://templatemo.com/tm-528-elegance
                     </div>
                 </div>
             </div> -->
-
+<section id="contact">
             <div class="section animated-row" data-section="slide07" id="slide07">
                 <div class="section-inner">
                     <div class="row justify-content-center">
@@ -505,7 +505,7 @@ https://templatemo.com/tm-528-elegance
             </div>
         </div>
 
-        
+        </section>
 
     <script src="js/jquery.js"></script>
 
