--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ https://templatemo.com/tm-528-elegance
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
                                                 <h4>Module 2</h4>
+                                               <h4><a href="./Module 2/index.html">CAD-Computer Aided Design</a></h4>
                                         <p>   </p>
                                             </div>
                                         </div>
