--- a/index.html
+++ b/index.html
@@ -301,28 +301,32 @@ https://templatemo.com/tm-528-elegance
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
                                     <div class="item animate" data-animate="fadeInUp">
-                                        <div class="portfolio-item">
-                                            <div class="thumb">
-                                                <img src="images/html background 2.jpg" alt="">
+                                        <a href="./module-1/index.html">
+                                            <div class="portfolio-item">
+                                                <div class="thumb">
+                                                    <img src="images/html background 2.jpg" alt="">
+                                                </div>
+                                                <div class="thumb-inner animate hover-effect" data-animate="fadeInUp">
+                                                    <h3>Module-1</h3>
+                                                    <h4>Web Development</h4>
+                                                    <p><h5><strong>HTML</strong><strong>CSS</strong>&<strong>Javascript</strong></h5></p>
+                                                </div>
                                             </div>
-                                            <div class="thumb-inner animate hover-effect" data-animate="fadeInUp">
-                                                <h3>Module-1</h3>
-                                                <h4><a href="./module-1/index.html">Web Development</a></h4>
-                                                <p><h5><strong>HTML</strong><strong>CSS</strong>&<strong>Javascript</strong></h5></p>
-                                            </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
-                                        <div class="portfolio-item">
-                                            <div class="thumb">
-                                                <img src="images/back-1.jpg" alt="">
+                                        <a href="./module-2/index.html">
+                                            <div class="portfolio-item">
+                                                <div class="thumb">
+                                                    <img src="images/back-1.jpg" alt="">
+                                                </div>
+                                                <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                    <h4>Module 2</h4>
+                                                   <h4>CAD-Computer Aided Design</h4>
+                                            <p>   </p>
+                                                </div>
                                             </div>
-                                            <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Module 2</h4>
-                                               <h4><a href="./Module 2/index.html">CAD-Computer Aided Design</a> CAD</h4>
-                                        <p>   </p>
-                                            </div>
-                                        </div>
+                                        </a>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
