--- a/index.html
+++ b/index.html
@@ -329,14 +329,16 @@ https://templatemo.com/tm-528-elegance
                                         </a>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
-                                        <div class="portfolio-item">
-                                            <div class="thumb">
-                                                <img src="images/back-2.jpg" alt="">
-                                            </div>
-                                            <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Module 3</h4>
-                                                <p></p>
-                                            </div>
+                                        <a href="./module-3/index.html">
+                                            <div class="portfolio-item">
+                                                <div class="thumb">
+                                                    <img src="images/back-2.jpg" alt="">
+                                                </div>
+                                                <div class="thumb-inner animate" data-animate="fadeInUp">
+                                                    <h4>Module 3</h4>
+                                                    <p></p>
+                                                </div>
+                                        </a>
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
