--- a/index.html
+++ b/index.html
@@ -342,15 +342,15 @@ https://templatemo.com/tm-528-elegance
                                         </div>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
-                                        <div class="portfolio-item">
-                                            <div class="thumb">
-                                                <img src="images/back-3.jpg" alt="">
-                                            </div>
-                                            <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Module 4</h4>
-                                                <p></p>
-                                            </div>
+                                       <a href="./module-4/index.html"> <div class="portfolio-item">
+                                        <div class="thumb">
+                                            <img src="images/back-3.jpg" alt="">
                                         </div>
+                                        <div class="thumb-inner animate" data-animate="fadeInUp">
+                                            <h4>Module 4</h4>
+                                            <p> <h1>3D printing</h1></p>
+                                        </div>
+                                    </div></a>
                                     </div>
                                     <div class="item animate" data-animate="fadeInUp">
                                         <div class="portfolio-item">
