--- a/module-3/index.html
+++ b/module-3/index.html
@@ -70,8 +70,7 @@
         </ul><br>
         <div class="flex4">
         <img src="./om.jpg" alt="pro1">
-        <video style="margin-left: 20px;"  src="./1.mp4" controls autoplay loop></video>
-        <img style="margin-left: 20px;" src="" alt="pro2">
+        
     </div>
     <div class="print">
         <img  style="height: 600px;" src="./kanha.jpg" alt="">
@@ -79,7 +78,7 @@
     </div>
     <div class="flex5">
         <img style="height: 500px;" src="./1.jpg" alt="1">
-        <video style="margin-left: 20px;height: 500px;"  src="./WhatsApp Video 2024-04-21 at 16.00.46.mp4" controls autoplay loop></video>
+        <video style="margin-left: 20px;height: 500px;"  src="./WhatsApp Video 2024-04-21 at 16.00.46.mp4" controls autoplay muted loop></video>
     </div><br><br><br><br><br>
     <!-- <div class="flex6">
         <img src="./pro5.jpg" alt="pro5">
